<resources>
    <string name="app_name">RasaDhana</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash_screen_with_logo">Splash Screen with Logo</string>
    <string name="login_account">Login</string>
    <string name="number_phone">Nomor HP</string>
    <string name="input_number_phone">Masukan Nomor HP</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="forgot_password">Lupa Passowrd?</string>
    <string name="login">Masuk</string>
    <string name="or">atau</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="dont_have_a_account">Belum Punya Akun?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="register_account">Register</string>
    <string name="register">Register</string>
    <string name="sent">Kirim</string>
    <string name="enter_your_personal_information">Enter your personal information</string>
    <string name="email">Email</string>
    <string name="input_email">Masukkan Email</string>
    <string name="name">Nama Lengkap</string>
    <string name="input_name">Masukkan Nama Lengkap</string>
    <string name="login_to_continue_using_the_app">Login to continue using the app</string>
    <string name="title_camera">Camera</string>
    <string name="title_kulkas">Kulkas</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="image_preview">Image Preview</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="atau">Atau</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="photo_ingredient">Foto Bahan</string>
    <string name="title_photo">Photo</string>
    <string name="insert_otp">Masukkan OTP</string>
    <string name="insert_otp_from_email">Masukkan kode OTP yang kami kirim melalui email anda yang terdaftar</string>
    <string name="we_sent_otp_to_your_email">Kami sudah mengirimkan kode OTP pada %s cek kontak masuk anda</string>
    <string name="image_forgot_password">Gambar Lupa Password</string>
    <string name="desc_forgot_password">Tidak ingat kata sandi? Masukkan email Anda, dan kami akan mengirimkan kode untuk membuat kata sandi baru.</string>
    <string name="sent_code">Kirim Kode</string>
    <string name="default_otp_message">Email Kosong</string>
    <string name="create_new_password">Buat Password Baru</string>
    <string name="desc_create_new_password">Password baru kamu harus unik dari sebelumnya</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="new_password">Password Baru</string>
    <string name="input_new_password">Masukkan Password Baru</string>
    <string name="input_confirm_new_password">Konfirmasi Password Baru</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="input_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="greeting">Hai %s,\nMau Masak Menu apa hari ini?</string>
    <string name="search_recipes">Cari Resep Makanan</string>
    <string name="recipe_maybe_you_like_it">Resep Yang Mungkin Kamu Suka</string>
    <string name="image_recipe">gambar resep</string>
    <string name="add_to_fav">tambah ke favorite</string>
    <string name="recipe_history">Riwayat Resep</string>
    <string name="name_recipe">Nama Resep</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="ingredients">Bahan - Bahan</string>
    <string name="how_to_make">Cara Membuat</string>
    <string name="result_generate_recipe">Resep Telah Ditemukan\n%d Resep Ditemukan untuk %s</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_who_want_to_logout">User yang ingin logout atau keluar dari aplikasi</string>
    <string name="user_who_want_to_edit_profile">User yang ingin edit profile</string>
    <string name="setting">Settings</string>
    <string name="update_user">Simpan</string>
    <string name="recipe_favorite">Resep Makanan Favorit Kamu</string>
    <string name="edit_image_profile">Edit Gambar Profile</string>
</resources>