<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rasadhana.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.rasadhana.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_photo"
        android:name="com.rasadhana.ui.photo.PhotoFragment"
        android:label="@string/title_photo"
        tools:layout="@layout/fragment_photo" >
        <action
            android:id="@+id/action_navigation_photo_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_kulkas"
        android:name="com.rasadhana.ui.kulkas.KulkasFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_kulkas" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.rasadhana.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>